--- a/app/pages/article/article.html
+++ b/app/pages/article/article.html
@@ -7,10 +7,10 @@
 
 <ion-content>
  <div *ngIf="selectedItem" class="selection">
-    <b>{{selectedItem.title}}</b>
+    <b>{{selectedItem.node_title}}</b>
     <ion-icon name="{{selectedItem.icon}}"></ion-icon>
-    <div>
-      You navigated here from <b>{{selectedItem.title}}</b>
+    <div [innerHTML]="selectedItem.body">
+      
     </div>
   </div>
 </ion-content>
