--- a/www/index.html
+++ b/www/index.html
@@ -21,5 +21,6 @@
   <script src="build/js/angular2-polyfills.js"></script>
   <!-- the bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
+  <script src="build/js/xml2json.js"></script>
 </body>
 </html>
